hphp/hack/test/typecheck/first_class_polymorphism/this_rfmt_in_tparam_bound_variance_bad.php.constraint_method_call.exp
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 112, characters 3-57:
Typing error (Typing[4323])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 19, characters 35-35:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 19, characters 40-71:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 19, characters 40-71:
  Expected a class with `{type TC as ConcBase3}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 112, characters 42-54:
  But got `WithTC3_Mixed`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 112, characters 8-16:
  This `as` or `=` refinement constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 19, characters 35-35:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 19, characters 40-71:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 112, characters 8-16:
  Expected `ConcBase3`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 19, characters 66-69:
    via this generic `this`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 10, characters 19-23:
  But got `mixed`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 115, characters 5-23:
Invalid argument (Typing[4110])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 40, characters 5-37:
  Expected a class with `{type TC as Base3}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 115, characters 9-21:
  But got `WithTC3_Mixed`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 40, characters 31-35:
  This `as` or `=` refinement constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 40, characters 31-35:
  Expected `Base3`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 10, characters 19-23:
  But got `mixed`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 119, characters 3-58:
Typing error (Typing[4323])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 25, characters 5-5:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 25, characters 10-44:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 25, characters 10-44:
  Expected a class with `{type TC super ConcBase3}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 119, characters 45-55:
  But got `WithTC3_Int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 119, characters 8-16:
  This `super` refinement constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 25, characters 5-5:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 25, characters 10-44:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  Expected `int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 119, characters 8-16:
  But got `ConcBase3`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 25, characters 39-42:
    via this generic `this`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 122, characters 5-21:
Invalid argument (Typing[4110])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  Expected `int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 121, characters 9-17:
  But got `ConcBase3`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 126, characters 3-58:
Typing error (Typing[4323])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 38-38:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 43-73:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 43-73:
  Expected a class with `{type TC = ConcBase3}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 126, characters 45-55:
  But got `WithTC3_Int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 126, characters 8-16:
  This `as` or `=` refinement constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 38-38:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 43-73:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 126, characters 8-16:
  Expected `ConcBase3`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 68-71:
    via this generic `this`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  But got `int`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 126, characters 3-58:
Typing error (Typing[4323])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 38-38:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 43-73:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 43-73:
  Expected a class with `{type TC = ConcBase3}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 126, characters 45-55:
  But got `WithTC3_Int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 126, characters 8-16:
  This `super` refinement constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 38-38:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 43-73:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  Expected `int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 126, characters 8-16:
  But got `ConcBase3`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 29, characters 68-71:
    via this generic `this`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 129, characters 5-21:
Invalid argument (Typing[4110])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  Expected `int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 128, characters 9-17:
  But got `ConcBase3`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 129, characters 5-21:
Invalid argument (Typing[4323])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 50, characters 50-54:
  `Tthis` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 50, characters 59-63:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 50, characters 59-63:
  Expected `Base3`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  But got `int`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 135, characters 3-67:
Typing error (Typing[4323])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 61, characters 35-35:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 61, characters 40-71:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 61, characters 40-71:
  Expected a class with `{type TC as ConcBase3_WithTC}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 135, characters 49-61:
  But got `WithTC3_Mixed`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 135, characters 8-23:
  This `as` or `=` refinement constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 61, characters 35-35:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 61, characters 40-71:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 135, characters 8-23:
  Expected `ConcBase3_WithTC`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 61, characters 66-69:
    via this generic `this`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 10, characters 19-23:
  But got `mixed`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 138, characters 5-23:
Invalid argument (Typing[4110])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 85, characters 5-73:
  Expected a class with `{type TC as Base3_WithTC with { type TBase = _ }}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 138, characters 9-21:
  But got `WithTC3_Mixed`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 85, characters 31-71:
  This `as` or `=` refinement constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 85, characters 31-71:
  Expected `Base3_WithTC`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 10, characters 19-23:
  But got `mixed`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 138, characters 5-23:
Invalid argument (Typing[4110])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 85, characters 5-73:
  Expected a class with `{type TC as Base3_WithTC with { type TBase = _ }}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 138, characters 9-21:
  But got `WithTC3_Mixed`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 85, characters 31-71:
  This `as` or `=` refinement constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 85, characters 31-71:
  Expected a class with `{type TBase = _}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 10, characters 19-23:
  But got `mixed`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 143, characters 3-68:
Typing error (Typing[4323])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 66, characters 38-38:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 66, characters 43-77:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 66, characters 43-77:
  Expected a class with `{type TC super ConcBase3_WithTC}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 143, characters 52-62:
  But got `WithTC3_Int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 143, characters 8-23:
  This `super` refinement constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 66, characters 38-38:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 66, characters 43-77:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  Expected `int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 143, characters 8-23:
  But got `ConcBase3_WithTC`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 66, characters 72-75:
    via this generic `this`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 146, characters 5-21:
Invalid argument (Typing[4110])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  Expected `int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 145, characters 9-24:
  But got `ConcBase3_WithTC`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 151, characters 3-68:
Typing error (Typing[4323])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 38-38:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 43-73:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 43-73:
  Expected a class with `{type TC = ConcBase3_WithTC}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 151, characters 52-62:
  But got `WithTC3_Int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 151, characters 8-23:
  This `as` or `=` refinement constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 38-38:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 43-73:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 151, characters 8-23:
  Expected `ConcBase3_WithTC`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 68-71:
    via this generic `this`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  But got `int`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 151, characters 3-68:
Typing error (Typing[4323])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 38-38:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 43-73:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 43-73:
  Expected a class with `{type TC = ConcBase3_WithTC}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 151, characters 52-62:
  But got `WithTC3_Int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 151, characters 8-23:
  This `super` refinement constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 38-38:
  `T` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 43-73:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  Expected `int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 151, characters 8-23:
  But got `ConcBase3_WithTC`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 71, characters 68-71:
    via this generic `this`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 154, characters 5-21:
Invalid argument (Typing[4110])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  Expected `int`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 153, characters 9-24:
  But got `ConcBase3_WithTC`
ERROR: File "this_rfmt_in_tparam_bound_variance_bad.php", line 154, characters 5-21:
Invalid argument (Typing[4323])
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 102, characters 5-9:
  `Tthis` is a constrained type parameter
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 102, characters 14-54:
  This type constraint is violated
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 102, characters 14-54:
  Expected a class with `{type TBase = _}`
  File "this_rfmt_in_tparam_bound_variance_bad.php", line 14, characters 19-21:
  But got `int`
